do all the analyses, as well as random noise LDA

--- a/src/notebooks/carran_analysis/1-shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/1-shape_analysis.ipynb
@@ -112,9 +112,11 @@
     "\n",
     "    with ThreadPoolExecutor(max_workers=32) as executor:\n",
     "        scales = np.array(\n",
-    "            tqdm(\n",
-    "                executor.map(load_scale_data, segmentation_paths),\n",
-    "                total=len(scale_paths),\n",
+    "            list(\n",
+    "                tqdm(\n",
+    "                    executor.map(load_scale_data, df[\"path\"]),\n",
+    "                    total=len(df),\n",
+    "                )\n",
     "            )\n",
     "        )\n",
     "\n",
@@ -139,108 +141,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648e1d59",
+   "id": "c7dd5295",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Sort values so that we get the right plotting order for our scatter plots\n",
+    "General function for creating a plot given the right metadata categories\n",
     "\"\"\"\n",
     "\n",
-    "flat_coeffs = coeffs.reshape((coeffs.shape[0], -1))\n",
+    "import pandas as pd\n",
     "\n",
-    "df.sort_values(by=\"magnification\", inplace=True, ascending=True)\n",
-    "df.sort_values(by=\"age\", inplace=True)\n",
-    "df.sort_values(by=\"sex\", inplace=True, ascending=True)\n",
-    "\n",
-    "# For the seaborn plotting - we want to encode as a categorical variable\n",
-    "df[\"age\"] = df[\"age\"].astype(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d0bd0a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Create some labels for the sex/age encoding\n",
-    "\"\"\"\n",
-    "\n",
-    "mf_mask = df[\"sex\"] != \"?\"\n",
-    "mf_df = df[mf_mask].copy()\n",
-    "mf_coeffs = flat_coeffs[mf_mask]\n",
-    "\n",
-    "# Want these groups - M/F age 7/12/18/40\n",
-    "groups = np.zeros(mf_coeffs.shape[0], dtype=int)\n",
-    "\n",
-    "groups[mf_df[\"sex\"] == \"M\"] += 8\n",
-    "\n",
-    "groups[mf_df[\"age\"] == \"12\"] += 1\n",
-    "groups[mf_df[\"age\"] == \"18\"] += 2\n",
-    "groups[mf_df[\"age\"] == \"40\"] += 4\n",
-    "\n",
-    "encoding = {\n",
-    "    0: \"F7\",\n",
-    "    1: \"F12\",\n",
-    "    2: \"F18\",\n",
-    "    4: \"F40\",\n",
-    "    8: \"M7\",\n",
-    "    9: \"M12\",\n",
-    "    10: \"M18\",\n",
-    "    12: \"M40\",\n",
-    "}\n",
-    "colours = {\n",
-    "    0: \"lightcoral\",\n",
-    "    1: \"indianred\",\n",
-    "    2: \"brown\",\n",
-    "    4: \"red\",\n",
-    "    8: \"cornflowerblue\",\n",
-    "    9: \"royalblue\",\n",
-    "    10: \"darkblue\",\n",
-    "    12: \"blue\",\n",
-    "}\n",
-    "\n",
-    "# Check we've correctly encoded it\n",
-    "mf_df.loc[:, \"age_sex_group\"] = groups\n",
-    "for val, group in mf_df.groupby(\"age_sex_group\"):\n",
-    "    sexes = group[\"sex\"].unique()\n",
-    "    ages = group[\"age\"].unique()\n",
-    "    assert len(sexes) == 1, (val, sexes, ages)\n",
-    "    assert len(ages) == 1, (val, sexes, ages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d782048a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Perform LDA\n",
-    "\"\"\"\n",
-    "\n",
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-    "\n",
-    "lda = LinearDiscriminantAnalysis()\n",
-    "lda_coeffs = lda.fit_transform(mf_coeffs, groups)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d49bdef9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from matplotlib import colors\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Patch\n",
-    "from scipy.stats import gaussian_kde\n",
     "\n",
-    "fig, axes = plt.subplots(1, 5, figsize=(28, 6))\n",
+    "from scipy.stats import gaussian_kde\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "\n",
     "\n",
     "def clear2colour_cmap(colour) -> colors.Colormap:\n",
@@ -252,220 +168,263 @@
     "    return colors.ListedColormap([c_white, c_black], f\"clear2{colour}\")\n",
     "\n",
     "\n",
-    "for i, axis in enumerate(axes):\n",
-    "    x = lda_coeffs[:, i]\n",
-    "    y = lda_coeffs[:, i + 1]\n",
+    "def _plot_kde_scatter(\n",
+    "    axis: plt.Axes,\n",
+    "    x_coeffs: np.ndarray,\n",
+    "    y_coeffs: np.ndarray,\n",
+    "    lda_labels,\n",
+    "    colours,\n",
+    "    grouping_cols,\n",
+    "    uniques,\n",
+    ") -> list[Patch]:\n",
+    "    \"\"\"\n",
+    "    Plot a scatter plot and LDA colour-coded using our different labels.\n",
+    "\n",
+    "    Returns handles for plotting\n",
+    "    \"\"\"\n",
+    "    unique_labels = np.unique(lda_labels)\n",
+    "    assert len(unique_labels) == len(colours), f\"{len(unique_labels)=}, {len(colours)=}\"\n",
     "\n",
     "    # Grid for this pair\n",
-    "    xmin, xmax = x.min(), x.max()\n",
-    "    ymin, ymax = y.min(), y.max()\n",
+    "    xmin, xmax = x_coeffs.min(), x_coeffs.max()\n",
+    "    ymin, ymax = y_coeffs.min(), y_coeffs.max()\n",
     "    xx, yy = np.mgrid[xmin:xmax:200j, ymin:ymax:200j]\n",
     "    positions = np.vstack([xx.ravel(), yy.ravel()])\n",
     "\n",
-    "    handles = []\n",
-    "    for g, label in encoding.items():\n",
-    "        mask = groups == g\n",
-    "        if mask.sum() < 2:\n",
-    "            continue  # KDE needs at least 2 points\n",
+    "    pretty_labels = {\n",
+    "        code: \", \".join(f\"{col}={val}\" for col, val in zip(grouping_cols, uniq))\n",
+    "        for code, uniq in enumerate(uniques)\n",
+    "    }\n",
     "\n",
-    "        data = np.vstack([x[mask], y[mask]])\n",
+    "    handles = []\n",
+    "    for label, colour in zip(unique_labels, colours):\n",
+    "        mask = lda_labels == label\n",
+    "        if mask.sum() < 2:\n",
+    "            raise ValueError(\"KDE needs at least 2 points\")\n",
+    "\n",
+    "        data = np.vstack([x_coeffs[mask], y_coeffs[mask]])\n",
     "        kde = gaussian_kde(data)\n",
     "        f = np.reshape(kde(positions).T, xx.shape)\n",
     "\n",
-    "        axis.contourf(xx, yy, f, levels=15, cmap=clear2colour_cmap(colours[g]))\n",
+    "        axis.contourf(xx, yy, f, levels=15, cmap=clear2colour_cmap(colour))\n",
     "        n = int(np.sum(mask))\n",
-    "        handles.append(Patch(color=colours[g], label=f\"{label}, {n=}\"))\n",
+    "        handles.append(Patch(color=colour, label=f\"{pretty_labels[label]}, {n=}\"))\n",
     "\n",
-    "        axis.scatter(*data, c=colours[g], s=5, marker=\"s\", linewidth=0.5, edgecolor=\"k\")\n",
+    "        axis.scatter(*data, color=colour, s=5, marker=\"s\", linewidth=0.5, edgecolor=\"k\")\n",
     "\n",
-    "    axis.set_title(f\"LD{i+1} vs LD{i+2}\")\n",
+    "    return handles\n",
     "\n",
-    "if handles:\n",
-    "    axes[0].legend(handles=handles, loc=\"upper left\")"
+    "\n",
+    "def plot_lda(\n",
+    "    df: pd.DataFrame,\n",
+    "    coeffs: np.ndarray,\n",
+    "    grouping_cols: str | list[str],\n",
+    "    colours: list[str],\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Perform LDA on a dataframe using the values in columns.\n",
+    "\n",
+    "    Requires the coeffs to be in the same order as the df columns\n",
+    "    \"\"\"\n",
+    "    assert len(df) == len(coeffs), f\"{len(df)=} {coeffs.shape=}\"\n",
+    "\n",
+    "    # First, get an encoding for the grouping categories and their labels\n",
+    "    if isinstance(grouping_cols, str):\n",
+    "        grouping_cols = [grouping_cols]\n",
+    "\n",
+    "    combos = df[grouping_cols].apply(lambda row: tuple(row.values), axis=1)\n",
+    "    lda_labels, uniques = pd.factorize(combos)\n",
+    "\n",
+    "    # Then perform LDA using these labels\n",
+    "    lda = LinearDiscriminantAnalysis()\n",
+    "    lda_coeffs = lda.fit_transform(coeffs, lda_labels)\n",
+    "\n",
+    "    # Finally plot\n",
+    "    # We have n labels, which gives us (n-1) LDA coeffs and therefore (n-2) axes\n",
+    "    n_axes = len(uniques) - 2\n",
+    "    fig, axes = plt.subplots(1, n_axes, figsize=(5 * n_axes, 5))\n",
+    "    if n_axes == 1:\n",
+    "        axes = [axes]\n",
+    "\n",
+    "    for i, axis in enumerate(axes):\n",
+    "        handles = _plot_kde_scatter(\n",
+    "            axis,\n",
+    "            lda_coeffs[:, i],\n",
+    "            lda_coeffs[:, i + 1],\n",
+    "            lda_labels,\n",
+    "            colours,\n",
+    "            grouping_cols,\n",
+    "            uniques,\n",
+    "        )\n",
+    "\n",
+    "    handles = [\n",
+    "        Patch(color=h.get_facecolor(), label=f\"{h.get_label()}\") for h in handles\n",
+    "    ]\n",
+    "    axes[0].legend(handles=handles)\n",
+    "\n",
+    "\n",
+    "keep = df[\"sex\"] != \"?\"\n",
+    "plot_lda(\n",
+    "    df[keep],\n",
+    "    coeffs[keep],\n",
+    "    [\"sex\", \"age\"],\n",
+    "    colours=[\n",
+    "        \"royalblue\",\n",
+    "        \"cornflowerblue\",\n",
+    "        \"brown\",\n",
+    "        \"red\",\n",
+    "        \"blue\",\n",
+    "        \"indianred\",\n",
+    "        \"lightcoral\",\n",
+    "    ],\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa88d18f",
+   "id": "252d19f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.preprocessing import label_binarize\n",
-    "from sklearn.metrics import (\n",
-    "    roc_auc_score,\n",
-    "    average_precision_score,\n",
-    "    recall_score,\n",
-    "    precision_score,\n",
+    "\"\"\"\n",
+    "Repeat but only with 18M, separating by growth\n",
+    "\"\"\"\n",
+    "\n",
+    "keep = (df[\"sex\"] == \"M\") & (df[\"age\"] == 18)\n",
+    "plot_lda(\n",
+    "    df[keep],\n",
+    "    coeffs[keep],\n",
+    "    [\"growth\", \"mutation\"],\n",
+    "    colours=[\"indianred\", \"lightblue\", \"red\", \"blue\"],\n",
+    ")\n",
+    "plt.gcf().suptitle(\"M18 only\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "022c5e0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep = ~pd.isna(df[\"growth\"]) & (df[\"mutation\"] == \"WT\")\n",
+    "\n",
+    "cmap = plt.get_cmap(\"coolwarm\")\n",
+    "\n",
+    "plot_lda(\n",
+    "    df[keep],\n",
+    "    coeffs[keep],\n",
+    "    \"growth\",\n",
+    "    colours=[cmap(x) for x in [0.2, 0.4, 0.6, 0.8]]\n",
+    ")\n",
+    "plt.gcf().suptitle(\"WT only; Onto/regen\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "238f3b46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep = (df[\"mutation\"] == \"WT\") & (df[\"sex\"] == \"M\")\n",
+    "plot_lda(\n",
+    "    df[keep],\n",
+    "    coeffs[keep],\n",
+    "    \"age\",\n",
+    "    colours=[\"darkblue\", \"blue\", \"royalblue\", \"cornflowerblue\"]\n",
+    ")\n",
+    "plt.gcf().suptitle(\"M WTs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e89898b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep = (df[\"mutation\"] == \"WT\") & (df[\"sex\"] == \"F\")\n",
+    "plot_lda(\n",
+    "    df[keep],\n",
+    "    coeffs[keep],\n",
+    "    \"age\",\n",
+    "    colours=[\"indianred\", \"lightcoral\", \"red\"]\n",
+    ")\n",
+    "plt.gcf().suptitle(\"F WTs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2724ecd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ages = {12, 18, 10}\n",
+    "keep = df[\"age\"].isin(ages) & (df[\"mutation\"] == \"WT\")\n",
+    "plot_lda(\n",
+    "    df[keep],\n",
+    "    coeffs[keep],\n",
+    "    \"sex\",\n",
+    "    colours=[\"grey\", \"red\", \"blue\"],\n",
+    ")\n",
+    "plt.gcf().suptitle(f\"Only WTs aged {', '.join(str(x) for x in ages)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8656a837",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Plot some LDAs using random labels to check what spurious separation would look like\n",
+    "\"\"\"\n",
+    "\n",
+    "copy_df = df.copy()\n",
+    "\n",
+    "rng = np.random.default_rng()\n",
+    "copy_df[\"random\"] = rng.integers(0, 2, size=len(df))\n",
+    "copy_df[\"random2\"] = rng.integers(0, 4, size=len(df))\n",
+    "\n",
+    "plot_lda(\n",
+    "    copy_df,\n",
+    "    coeffs,\n",
+    "    [\"random\", \"random2\"],\n",
+    "    colours=list(colors.TABLEAU_COLORS.keys())[:8],\n",
+    ")\n",
+    "plt.gcf().suptitle(\"Spurious groupings are unlikely with the entire dataset\")\n",
+    "\n",
+    "plot_lda(copy_df, coeffs, \"random2\", colours=list(colors.TABLEAU_COLORS.keys())[:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca5d609c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep = (df[\"sex\"] == \"M\") & (df[\"age\"] == 18)\n",
+    "plot_lda(\n",
+    "    copy_df[keep],\n",
+    "    coeffs[keep],\n",
+    "    [\"random\", \"random2\"],\n",
+    "    colours=list(colors.TABLEAU_COLORS.keys())[:8],\n",
+    ")\n",
+    "plt.gcf().suptitle(\n",
+    "    \"But if we only use a subset, it becomes quite easy to separate them based on random noise\"\n",
     ")\n",
     "\n",
-    "\n",
-    "def per_class_separability(X, y, cv=5, random_state=42, in_sample: bool = False):\n",
-    "    \"\"\"\n",
-    "    per-class separability for LDA.\n",
-    "\n",
-    "    Returns a DataFrame with per-class ROC-AUC (OvR), PR-AUC (OvR),\n",
-    "    recall, precision, support, and mean true-class posterior.\n",
-    "    \"\"\"\n",
-    "    X = np.asarray(X)\n",
-    "    y = np.asarray(y)\n",
-    "    classes = np.unique(y)\n",
-    "\n",
-    "    skf = StratifiedKFold(n_splits=cv, shuffle=True, random_state=random_state)\n",
-    "    y_proba = np.zeros((len(y), len(classes)))\n",
-    "    y_pred = np.empty(len(y), dtype=classes.dtype)\n",
-    "\n",
-    "    for train_idx, test_idx in skf.split(X, y):\n",
-    "        if in_sample:\n",
-    "            test_idx = train_idx\n",
-    "\n",
-    "        lda = LinearDiscriminantAnalysis()\n",
-    "        lda.fit(X[train_idx], y[train_idx])\n",
-    "\n",
-    "        # Align fold probabilities to a fixed class order\n",
-    "        fold_classes = lda.classes_\n",
-    "        align = np.array([np.where(fold_classes == c)[0][0] for c in classes])\n",
-    "\n",
-    "        proba = lda.predict_proba(X[test_idx])[:, align]\n",
-    "        y_proba[test_idx] = proba\n",
-    "        y_pred[test_idx] = classes[np.argmax(proba, axis=1)]\n",
-    "\n",
-    "    # One-vs-rest AUCs\n",
-    "    y_bin = label_binarize(y, classes=classes)\n",
-    "    auc_ovr = roc_auc_score(y_bin, y_proba, average=None)\n",
-    "    ap_ovr = average_precision_score(y_bin, y_proba, average=None)\n",
-    "\n",
-    "    # Per-class precision/recall (hard predictions)\n",
-    "    recall = recall_score(y, y_pred, labels=classes, average=None, zero_division=0)\n",
-    "    precision = precision_score(\n",
-    "        y, y_pred, labels=classes, average=None, zero_division=0\n",
-    "    )\n",
-    "\n",
-    "    # Mean posterior for the true class (soft, interpretable as “confidence”)\n",
-    "    true_post = np.array(\n",
-    "        [y_proba[i, np.where(classes == y[i])[0][0]] for i in range(len(y))]\n",
-    "    )\n",
-    "    mean_true_post = np.array([true_post[y == c].mean() for c in classes])\n",
-    "\n",
-    "    support = np.array([(y == c).sum() for c in classes])\n",
-    "\n",
-    "    out = (\n",
-    "        pd.DataFrame(\n",
-    "            {\n",
-    "                \"support\": support,\n",
-    "                \"recall\": recall,  # “X% of the time we correctly pick this class”\n",
-    "                \"precision\": precision,\n",
-    "                \"roc_auc_ovr\": auc_ovr,  # threshold-free separability vs rest\n",
-    "                \"ap_ovr\": ap_ovr,  # PR AUC (useful for imbalance)\n",
-    "                \"mean_true_posterior\": mean_true_post,  # avg P(class | x) for true class\n",
-    "            },\n",
-    "            index=classes,\n",
-    "        )\n",
-    "        .sort_index()\n",
-    "        .rename(index=encoding)\n",
-    "    )\n",
-    "\n",
-    "    return out\n",
-    "\n",
-    "\n",
-    "# Out-of-sample metrics\n",
-    "per_class_separability(mf_coeffs, groups, cv=5, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b7cc615",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# In-sample metrics\n",
-    "per_class_separability(mf_coeffs, groups, cv=5, random_state=42, in_sample=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5bbc84ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Do the LDA using different labels\n",
-    "\"\"\"\n",
-    "\n",
-    "m18_mask = (df[\"sex\"] == \"M\") & (df[\"age\"] == \"18\")\n",
-    "m18_df = df[m18_mask]\n",
-    "m18_coeffs = coeffs[m18_mask]\n",
-    "\n",
-    "m18_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb556942",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Want these groups - onto/regen wt/omd\n",
-    "assert set(np.unique(m18_df[\"mutation\"])) == {\"OMD\", \"WT\"}\n",
-    "assert set(np.unique(m18_df[\"growth\"])) == {np.inf, 10}\n",
-    "\n",
-    "groups = np.zeros(len(m18_coeffs), dtype=int)\n",
-    "\n",
-    "groups[m18_df[\"growth\"] == np.inf] += 2\n",
-    "groups[m18_df[\"mutation\"] == \"WT\"] += 1\n",
-    "\n",
-    "encoding = {0: \"Regen (10); OMD\", 1: \"Regen (10); WT\", 2: \"Onto; OMD\", 3: \"Onto; WT\"}\n",
-    "colours = {0: \"blue\", 1: \"red\", 2: \"darkblue\", 3: \"lightcoral\"}\n",
-    "\n",
-    "lda = LinearDiscriminantAnalysis()\n",
-    "lda_coeffs = lda.fit_transform(m18_coeffs, groups)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aac346aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(1, 3, figsize=(14, 6))\n",
-    "\n",
-    "for i, axis in enumerate(axes):\n",
-    "    x = lda_coeffs[:, i]\n",
-    "    y = lda_coeffs[:, i + 1 if i < 2 else 0]\n",
-    "\n",
-    "    # Grid for this pair\n",
-    "    xmin, xmax = x.min(), x.max()\n",
-    "    ymin, ymax = y.min(), y.max()\n",
-    "    xx, yy = np.mgrid[xmin:xmax:200j, ymin:ymax:200j]\n",
-    "    positions = np.vstack([xx.ravel(), yy.ravel()])\n",
-    "\n",
-    "    handles = []\n",
-    "    for g, label in encoding.items():\n",
-    "        mask = groups == g\n",
-    "        if mask.sum() < 2:\n",
-    "            continue  # KDE needs at least 2 points\n",
-    "\n",
-    "        data = np.vstack([x[mask], y[mask]])\n",
-    "        kde = gaussian_kde(data)\n",
-    "        f = np.reshape(kde(positions).T, xx.shape)\n",
-    "\n",
-    "        axis.contourf(xx, yy, f, levels=15, cmap=clear2colour_cmap(colours[g]))\n",
-    "        n = int(np.sum(mask))\n",
-    "        handles.append(Patch(color=colours[g], label=f\"{label}, {n=}\"))\n",
-    "\n",
-    "        axis.scatter(*data, c=colours[g], s=5, marker=\"s\", linewidth=0.5, edgecolor=\"k\")\n",
-    "\n",
-    "    axis.set_title(f\"LD{i+1} vs LD{i+2}\")\n",
-    "\n",
-    "axes[0].legend(handles=handles)\n",
-    "\n",
-    "fig.suptitle(\"M18\")"
+    "plot_lda(\n",
+    "    copy_df[keep],\n",
+    "    coeffs[keep],\n",
+    "    \"random2\",\n",
+    "    colours=list(colors.TABLEAU_COLORS.keys())[:4],\n",
+    ")"
    ]
   }
  ],
