use magnification properly

--- a/src/notebooks/carran_analysis/1-shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/1-shape_analysis.ipynb
@@ -76,6 +76,7 @@
     "\n",
     "import tifffile\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from tqdm.notebook import tqdm\n",
     "from skimage.measure import euler_number\n",
     "from scipy.ndimage import binary_fill_holes\n",
@@ -120,7 +121,14 @@
     "            )\n",
     "        )\n",
     "\n",
-    "    coeffs = [efa.coefficients(scale, n_edge_points, order) for scale in tqdm(scales)]\n",
+    "    # The default magnification is 4.0\n",
+    "    magnifications = df[\"magnification\"]\n",
+    "    magnifications[pd.isna(magnifications)] = 4.0\n",
+    "\n",
+    "    coeffs = [\n",
+    "        efa.coefficients(scale, n_edge_points, order, magnification=4 / magnification)\n",
+    "        for scale, magnification in zip(tqdm(scales), magnifications)\n",
+    "    ]\n",
     "    coeffs = np.stack(coeffs)\n",
     "    np.save(coeff_dump, coeffs)"
    ]
@@ -148,8 +156,6 @@
     "\"\"\"\n",
     "General function for creating a plot given the right metadata categories\n",
     "\"\"\"\n",
-    "\n",
-    "import pandas as pd\n",
     "\n",
     "from matplotlib import colors\n",
     "import matplotlib.pyplot as plt\n",
