plot eigenvectors - looks like we need to truncate quite aggressively to not overfit with LDA

--- a/src/notebooks/carran_analysis/1-shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/1-shape_analysis.ipynb
@@ -221,6 +221,84 @@
     "    return handles\n",
     "\n",
     "\n",
+    "def _kde_scatter(uniques, lda_coeffs, lda_labels, colours, grouping_cols):\n",
+    "    n_axes = len(uniques) - 2\n",
+    "    fig, axes = plt.subplots(1, n_axes, figsize=(5 * n_axes, 5))\n",
+    "    if n_axes == 1:\n",
+    "        axes = [axes]\n",
+    "\n",
+    "    for i, axis in enumerate(axes):\n",
+    "        handles = _plot_kde_scatter(\n",
+    "            axis,\n",
+    "            lda_coeffs[:, i],\n",
+    "            lda_coeffs[:, i + 1],\n",
+    "            lda_labels,\n",
+    "            colours,\n",
+    "            grouping_cols,\n",
+    "            uniques,\n",
+    "        )\n",
+    "\n",
+    "    handles = [\n",
+    "        Patch(color=h.get_facecolor(), label=f\"{h.get_label()}\") for h in handles\n",
+    "    ]\n",
+    "    axes[0].legend(handles=handles)\n",
+    "\n",
+    "\n",
+    "def _heatmap(scalings):\n",
+    "    fig, axes = plt.subplots(2, 1, figsize=(10, 4))\n",
+    "\n",
+    "    vmax = np.max(np.abs(scalings))\n",
+    "    im = axes[0].imshow(\n",
+    "        scalings.T,\n",
+    "        aspect=\"auto\",\n",
+    "        cmap=\"seismic\",\n",
+    "        norm=colors.CenteredNorm(vcenter=0.0),\n",
+    "    )\n",
+    "    fig.colorbar(im, ax=axes[0])\n",
+    "\n",
+    "    for x in scalings.T:\n",
+    "        axes[1].plot(x, alpha=0.5)\n",
+    "\n",
+    "\n",
+    "def _barplot(scalings):\n",
+    "    n_bars = 14\n",
+    "    fig, axes = plt.subplots(1, scalings.shape[1], figsize=(scalings.shape[1] * 4, 4))\n",
+    "\n",
+    "    # First two ticks for size, d_1; then calculate the rest + build their labels\n",
+    "    xticks = [-3, -1]\n",
+    "    xticklabels = [\"size\", r\"$d_1$\"]\n",
+    "    vlines = [-2, 0]\n",
+    "    for i in range(n_bars // 4):\n",
+    "        xticklabels += [rf\"$a_{i+2}$\", rf\"$b_{i+2}$\", rf\"$c_{i+2}$\", rf\"$d_{i+2}$\"]\n",
+    "\n",
+    "        start, end = 1 + 5 * i, 5 + 5 * i\n",
+    "        xticks += list(range(start, end))\n",
+    "\n",
+    "        vlines.append(start - 1)\n",
+    "\n",
+    "    for axis, scaling in zip(axes, scalings.T, strict=True):\n",
+    "        axis.bar(xticks, scaling[:n_bars])\n",
+    "\n",
+    "        axis.set_xticks(\n",
+    "            xticks,\n",
+    "            xticklabels,\n",
+    "            ha=\"right\",\n",
+    "        )\n",
+    "\n",
+    "        # Separate out the different conceptual bits\n",
+    "        for v in vlines:\n",
+    "            axis.axvline(v, color=\"k\", linestyle=\"--\")\n",
+    "\n",
+    "\n",
+    "def _plot_vectors(scalings: np.ndarray):\n",
+    "    \"\"\"\n",
+    "    Plot eigenvectors for a dimensionality reduction thing\n",
+    "    \"\"\"\n",
+    "    _heatmap(scalings)\n",
+    "\n",
+    "    _barplot(scalings)\n",
+    "\n",
+    "\n",
     "def plot_lda(\n",
     "    df: pd.DataFrame,\n",
     "    coeffs: np.ndarray,\n",
@@ -245,28 +323,11 @@
     "    lda = LinearDiscriminantAnalysis()\n",
     "    lda_coeffs = lda.fit_transform(coeffs, lda_labels)\n",
     "\n",
-    "    # Finally plot\n",
-    "    # We have n labels, which gives us (n-1) LDA coeffs and therefore (n-2) axes\n",
-    "    n_axes = len(uniques) - 2\n",
-    "    fig, axes = plt.subplots(1, n_axes, figsize=(5 * n_axes, 5))\n",
-    "    if n_axes == 1:\n",
-    "        axes = [axes]\n",
+    "    # Then plot KDE + scatter plots\n",
+    "    _kde_scatter(uniques, lda_coeffs, lda_labels, colours, grouping_cols)\n",
     "\n",
-    "    for i, axis in enumerate(axes):\n",
-    "        handles = _plot_kde_scatter(\n",
-    "            axis,\n",
-    "            lda_coeffs[:, i],\n",
-    "            lda_coeffs[:, i + 1],\n",
-    "            lda_labels,\n",
-    "            colours,\n",
-    "            grouping_cols,\n",
-    "            uniques,\n",
-    "        )\n",
-    "\n",
-    "    handles = [\n",
-    "        Patch(color=h.get_facecolor(), label=f\"{h.get_label()}\") for h in handles\n",
-    "    ]\n",
-    "    axes[0].legend(handles=handles)\n",
+    "    # Plot LDA vectors\n",
+    "    _plot_vectors(lda.scalings_)\n",
     "\n",
     "\n",
     "keep = df[\"sex\"] != \"?\"\n",
