plot shapes of extreme scales

--- a/src/notebooks/carran_analysis/1-shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/1-shape_analysis.ipynb
@@ -160,6 +160,7 @@
     "from matplotlib import colors\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Patch\n",
+    "from matplotlib.offsetbox import AnnotationBbox, OffsetImage\n",
     "\n",
     "from scipy.stats import gaussian_kde\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
@@ -299,6 +300,42 @@
     "    _barplot(scalings)\n",
     "\n",
     "\n",
+    "def _plot_extrema(coeffs: np.ndarray, paths: pd.Series):\n",
+    "    \"\"\"\n",
+    "    Show some scale images on the scatter plots\n",
+    "    \"\"\"\n",
+    "    n_axes = coeffs.shape[1] - 1\n",
+    "    fig, axes = plt.subplots(1, n_axes, figsize=(4 * n_axes, 4))\n",
+    "    if n_axes == 1:\n",
+    "        axes = [axes]\n",
+    "\n",
+    "    # directions - we'll dot with these to get the extrema\n",
+    "    angles = np.deg2rad(np.arange(0, 360, 22.5))\n",
+    "    dirns = np.stack([np.cos(angles), np.sin(angles)], axis=1)\n",
+    "\n",
+    "    for i, axis in enumerate(axes):\n",
+    "        co_ords = np.stack([coeffs[:, i], coeffs[:, i + 1]])\n",
+    "        axis.scatter(*co_ords, s=2)\n",
+    "\n",
+    "        scores = np.linalg.matmul(co_ords.T, dirns.T)\n",
+    "        extrema_idx = scores.argmax(axis=0)\n",
+    "\n",
+    "        extrema_locs = co_ords.T[extrema_idx]\n",
+    "        extrema_paths = paths.values[extrema_idx]\n",
+    "\n",
+    "        extrema_imgs = [tifffile.imread(f)[::20, ::20] for f in extrema_paths]\n",
+    "\n",
+    "        for loc, img in zip(extrema_locs, extrema_imgs, strict=True):\n",
+    "            ab = AnnotationBbox(\n",
+    "                OffsetImage(img, zoom=0.3, cmap=clear2colour_cmap(\"k\")),\n",
+    "                loc,\n",
+    "                pad=0.05,\n",
+    "                frameon=True,\n",
+    "                bboxprops={\"edgecolor\": \"k\", \"linewidth\": 1},\n",
+    "            )\n",
+    "            axis.add_artist(ab)\n",
+    "\n",
+    "\n",
     "def plot_lda(\n",
     "    df: pd.DataFrame,\n",
     "    coeffs: np.ndarray,\n",
@@ -328,6 +365,9 @@
     "\n",
     "    # Plot LDA vectors\n",
     "    _plot_vectors(lda.scalings_)\n",
+    "\n",
+    "    # Plot extrema\n",
+    "    _plot_extrema(lda_coeffs, df[\"path\"])\n",
     "\n",
     "\n",
     "keep = df[\"sex\"] != \"?\"\n",
@@ -380,10 +420,7 @@
     "cmap = plt.get_cmap(\"coolwarm\")\n",
     "\n",
     "plot_lda(\n",
-    "    df[keep],\n",
-    "    coeffs[keep],\n",
-    "    \"growth\",\n",
-    "    colours=[cmap(x) for x in [0.2, 0.4, 0.6, 0.8]]\n",
+    "    df[keep], coeffs[keep], \"growth\", colours=[cmap(x) for x in [0.2, 0.4, 0.6, 0.8]]\n",
     ")\n",
     "plt.gcf().suptitle(\"WT only; Onto/regen\")"
    ]
@@ -400,7 +437,7 @@
     "    df[keep],\n",
     "    coeffs[keep],\n",
     "    \"age\",\n",
-    "    colours=[\"darkblue\", \"blue\", \"royalblue\", \"cornflowerblue\"]\n",
+    "    colours=[\"darkblue\", \"blue\", \"royalblue\", \"cornflowerblue\"],\n",
     ")\n",
     "plt.gcf().suptitle(\"M WTs\")"
    ]
@@ -413,12 +450,7 @@
    "outputs": [],
    "source": [
     "keep = (df[\"mutation\"] == \"WT\") & (df[\"sex\"] == \"F\")\n",
-    "plot_lda(\n",
-    "    df[keep],\n",
-    "    coeffs[keep],\n",
-    "    \"age\",\n",
-    "    colours=[\"indianred\", \"lightcoral\", \"red\"]\n",
-    ")\n",
+    "plot_lda(df[keep], coeffs[keep], \"age\", colours=[\"indianred\", \"lightcoral\", \"red\"])\n",
     "plt.gcf().suptitle(\"F WTs\")"
    ]
   },
