do PCA as well as LDA - I think PCA might be better, at least with very many harmonics

--- a/src/notebooks/carran_analysis/1-shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/1-shape_analysis.ipynb
@@ -143,7 +143,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "coeffs = scaler.fit_transform(coeffs)"
+    "# coeffs = scaler.fit_transform(coeffs)"
    ]
   },
   {
@@ -223,7 +223,7 @@
     "\n",
     "\n",
     "def _kde_scatter(uniques, lda_coeffs, lda_labels, colours, grouping_cols):\n",
-    "    n_axes = len(uniques) - 2\n",
+    "    n_axes = lda_coeffs.shape[1] - 1\n",
     "    fig, axes = plt.subplots(1, n_axes, figsize=(5 * n_axes, 5))\n",
     "    if n_axes == 1:\n",
     "        axes = [axes]\n",
@@ -367,9 +367,16 @@
     "    _plot_vectors(lda.scalings_)\n",
     "\n",
     "    # Plot extrema\n",
-    "    _plot_extrema(lda_coeffs, df[\"path\"])\n",
-    "\n",
-    "\n",
+    "    _plot_extrema(lda_coeffs, df[\"path\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ed1c3a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "keep = df[\"sex\"] != \"?\"\n",
     "plot_lda(\n",
     "    df[keep],\n",
@@ -497,16 +504,7 @@
     ")\n",
     "plt.gcf().suptitle(\"Spurious groupings are unlikely with the entire dataset\")\n",
     "\n",
-    "plot_lda(copy_df, coeffs, \"random2\", colours=list(colors.TABLEAU_COLORS.keys())[:4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca5d609c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plot_lda(copy_df, coeffs, \"random2\", colours=list(colors.TABLEAU_COLORS.keys())[:4])\n",
     "keep = (df[\"sex\"] == \"M\") & (df[\"age\"] == 18)\n",
     "plot_lda(\n",
     "    copy_df[keep],\n",
@@ -519,6 +517,180 @@
     ")\n",
     "\n",
     "plot_lda(\n",
+    "    copy_df[keep],\n",
+    "    coeffs[keep],\n",
+    "    \"random2\",\n",
+    "    colours=list(colors.TABLEAU_COLORS.keys())[:4],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ead50d2c",
+   "metadata": {},
+   "source": [
+    "PCA\n",
+    "----\n",
+    "Do it now with PCA instead..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9106716f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "\n",
+    "def plot_pca(\n",
+    "    df: pd.DataFrame,\n",
+    "    coeffs: np.ndarray,\n",
+    "    colour_cols: str | list[str],\n",
+    "    colours: list[str],\n",
+    "    show_vectors: bool = False,\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Perform PCA on a dataframe, colour coding according to the unique values in the provided groups\n",
+    "\n",
+    "    Requires the coeffs to be in the same order as the df columns\n",
+    "\n",
+    "    Option to show eigenvector plots, since these will always be the same\n",
+    "    \"\"\"\n",
+    "    assert len(df) == len(coeffs), f\"{len(df)=} {coeffs.shape=}\"\n",
+    "\n",
+    "    # First, get an encoding for the labels\n",
+    "    if isinstance(colour_cols, str):\n",
+    "        colour_cols = [colour_cols]\n",
+    "    combos = df[colour_cols].apply(lambda row: tuple(row.values), axis=1)\n",
+    "    labels, uniques = pd.factorize(combos)\n",
+    "\n",
+    "    # Perform PCA - agnositic to the labels\n",
+    "    pca = PCA(n_components=6)\n",
+    "    pca_coeffs = pca.fit_transform(coeffs)\n",
+    "\n",
+    "    # Then plot KDE + scatter plots\n",
+    "    _kde_scatter(uniques, pca_coeffs, labels, colours, colour_cols)\n",
+    "\n",
+    "    if show_vectors:\n",
+    "        # Plot LDA vectors\n",
+    "        _plot_vectors(pca.components_.T)\n",
+    "\n",
+    "        # Plot extrema\n",
+    "        _plot_extrema(pca_coeffs, df[\"path\"])\n",
+    "\n",
+    "\n",
+    "keep = df[\"sex\"] != \"?\"\n",
+    "plot_pca(\n",
+    "    df[keep],\n",
+    "    coeffs[keep],\n",
+    "    [\"sex\", \"age\"],\n",
+    "    colours=[\n",
+    "        \"royalblue\",\n",
+    "        \"cornflowerblue\",\n",
+    "        \"brown\",\n",
+    "        \"red\",\n",
+    "        \"blue\",\n",
+    "        \"indianred\",\n",
+    "        \"lightcoral\",\n",
+    "    ],\n",
+    "    show_vectors=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b4213c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep = (df[\"sex\"] == \"M\") & (df[\"age\"] == 18)\n",
+    "plot_pca(\n",
+    "    df[keep],\n",
+    "    coeffs[keep],\n",
+    "    [\"growth\", \"mutation\"],\n",
+    "    colours=[\"indianred\", \"lightblue\", \"red\", \"blue\"],\n",
+    ")\n",
+    "plt.gcf().suptitle(\"M18 only\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62d49b6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep = ~pd.isna(df[\"growth\"]) & (df[\"mutation\"] == \"WT\")\n",
+    "\n",
+    "cmap = plt.get_cmap(\"coolwarm\")\n",
+    "\n",
+    "plot_pca(\n",
+    "    df[keep], coeffs[keep], \"growth\", colours=[cmap(x) for x in [0.2, 0.4, 0.6, 0.8]]\n",
+    ")\n",
+    "plt.gcf().suptitle(\"WT only; Onto/regen\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3744226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep = (df[\"mutation\"] == \"WT\") & (df[\"sex\"] == \"F\")\n",
+    "plot_pca(df[keep], coeffs[keep], \"age\", colours=[\"indianred\", \"lightcoral\", \"red\"])\n",
+    "plt.gcf().suptitle(\"F WTs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e2df557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ages = {12, 18, 10}\n",
+    "keep = df[\"age\"].isin(ages) & (df[\"mutation\"] == \"WT\")\n",
+    "plot_pca(\n",
+    "    df[keep],\n",
+    "    coeffs[keep],\n",
+    "    \"sex\",\n",
+    "    colours=[\"grey\", \"red\", \"blue\"],\n",
+    ")\n",
+    "plt.gcf().suptitle(f\"Only WTs aged {', '.join(str(x) for x in ages)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbec5698",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_pca(\n",
+    "    copy_df,\n",
+    "    coeffs,\n",
+    "    [\"random\", \"random2\"],\n",
+    "    colours=list(colors.TABLEAU_COLORS.keys())[:8],\n",
+    ")\n",
+    "plt.gcf().suptitle(\"Spurious groupings are unlikely with the entire dataset\")\n",
+    "\n",
+    "plot_pca(copy_df, coeffs, \"random2\", colours=list(colors.TABLEAU_COLORS.keys())[:4])\n",
+    "keep = (df[\"sex\"] == \"M\") & (df[\"age\"] == 18)\n",
+    "plot_pca(\n",
+    "    copy_df[keep],\n",
+    "    coeffs[keep],\n",
+    "    [\"random\", \"random2\"],\n",
+    "    colours=list(colors.TABLEAU_COLORS.keys())[:8],\n",
+    ")\n",
+    "plt.gcf().suptitle(\n",
+    "    \"But if we only use a subset, it becomes quite easy to separate them based on random noise\"\n",
+    ")\n",
+    "\n",
+    "plot_pca(\n",
     "    copy_df[keep],\n",
     "    coeffs[keep],\n",
     "    \"random2\",\n",
