rm misleading title

--- a/src/notebooks/carran_analysis/1-shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/1-shape_analysis.ipynb
@@ -42,7 +42,7 @@
     "from scale_morphology.scales import metadata\n",
     "\n",
     "df = metadata.df([str(x) for x in segmentation_paths])\n",
-    "df.head()"
+    "df.describe(include=\"all\")"
    ]
   },
   {
@@ -685,9 +685,6 @@
     "    coeffs[keep],\n",
     "    [\"random\", \"random2\"],\n",
     "    colours=list(colors.TABLEAU_COLORS.keys())[:8],\n",
-    ")\n",
-    "plt.gcf().suptitle(\n",
-    "    \"But if we only use a subset, it becomes quite easy to separate them based on random noise\"\n",
     ")\n",
     "\n",
     "plot_pca(\n",
