massive refactor of shape analysis notebook

--- a/src/notebooks/carran_analysis/3-metadata.ipynb
+++ b/src/notebooks/carran_analysis/3-metadata.ipynb
@@ -75,6 +75,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d03ff869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_cols = [\"sex\", \"age\", \"growth\", \"mutation\"]\n",
+    "combo_counts = (\n",
+    "    df.groupby(group_cols, dropna=False)\n",
+    "    .size()\n",
+    "    .reset_index(name=\"count\")\n",
+    "    .sort_values(\"count\", ascending=False)\n",
+    ")\n",
+    "\n",
+    "combo_counts = (\n",
+    "    combo_counts.sort_values(\"growth\")\n",
+    "    .sort_values(\"age\")\n",
+    "    .sort_values(\"sex\")\n",
+    "    .sort_values(\"mutation\")\n",
+    "    .sort_values(\"count\", ascending=False)\n",
+    ")\n",
+    "combo_counts = combo_counts.loc[:, [\"mutation\", \"sex\", \"age\", \"growth\", \"count\"]]\n",
+    "combo_counts.to_csv(\"group_combos.csv\", index=False)\n",
+    "combo_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fd38970a",
    "metadata": {},
    "outputs": [],
