use config to read rdsf mount point

--- a/src/notebooks/carran_analysis/1-shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/1-shape_analysis.ipynb
@@ -50,9 +50,10 @@
     "\"\"\"\n",
     "\n",
     "import pathlib\n",
+    "from scale_morphology.scales import util\n",
     "\n",
-    "parent_dir = pathlib.Path(\n",
-    "    \"~/zebrafish_rdsf/Carran/Postgrad/segmentations_cleaned\"\n",
+    "parent_dir = (\n",
+    "    pathlib.Path(util.config()[\"rdsf_mount\"]) / \"Carran/Postgrad/segmentations_cleaned\"\n",
     ").expanduser()\n",
     "assert parent_dir.exists()\n",
     "\n",
